# pico-ps2-diagnostic-tool

./: README.md
check/: check.bat  check.py  check.sh
firmware/: CMakeLists.txt  pico_ps2_diagnostic_tool.c  pico_ps2_diagnostic_tool.pio
stuff/: garb.c.txt
